[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/18068.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/Signika-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/TitleScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[node name="TitleScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.25098, 0.270588, 0.356863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu"]
margin_right = 1040.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "Monster Eye Escape"
align = 1

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 69.0
margin_right = 1040.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 518.0
margin_bottom = 491.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="NewGame" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 175.0
margin_right = 518.0
margin_bottom = 235.0
rect_min_size = Vector2( 360, 60 )
flat = true

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/NewGame"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0.596078, 0.380392, 0.254902, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 255.0
margin_right = 518.0
margin_bottom = 315.0
rect_min_size = Vector2( 360, 60 )
flat = true

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/Exit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0.596078, 0.380392, 0.254902, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 522.0
margin_right = 1040.0
margin_bottom = 491.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="pressed" from="Menu/CenterRow/Buttons/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Exit" to="." method="_on_Exit_pressed"]
